fix description overflow issue

--- a/src/components/Gallery/styles.css
+++ b/src/components/Gallery/styles.css
@@ -15,3 +15,7 @@
 		font-size: 8vw;
 	}
 }
+
+.Gallery a:hover {
+	color: white;
+}
